add put for /pointScales endpoint with api-spec update
