# api-spec.yml
@@ -278,31 +278,6 @@ paths:
       security:
         - JWT: []
           
-    patch:
-      summary: "Partially updates the given point scale."
-      parameters:
-        - name: name
-          in: path
-          description: "The name of the point scale."
-          required: true
-          type: string
-          
-        - name: body
-          in: body
-          description: "The new info of the point scale."
-          required: false
-          schema:
-            $ref: "#/definitions/PointScale"
-      responses:
-        200:
-          description: "Successful operation."
-        404:
-          description: "Point scale not found."
-        409:
-          description: "Error code 3: Point scale name must be unique in the current application."
-      security:
-        - JWT: []
-          
     delete:
       summary: "Deletes the given point scale."
       parameters:
